hphp/test/zend/good/tests-classes/final_ctor3.php
<?php
  class A {
      final function A() { }
  }
  class B extends A {
      function A() { }
  }
?>