hphp/test/zend/bad/ext-standard-filters/php_user_filter_03.php
<?php
class foo extends php_user_filter {
    function filter($in, $out, &$consumed, $closing) {}
    function onCreate($var) {}
    function onClose() {}
}
?>